test/errors/typecheck/no_such_val.ty
foo := func(n: number) -> number {
	return bar
}